--- a/vida/jade/index.jade
+++ b/vida/jade/index.jade
@@ -40,17 +40,17 @@ html(lang="en")
 		h1 registro
 		h2.subtitulo REGISTRO
 		
-		.container.bggris
+		.container.bgwhite
 			form
 				.row
 					.col-md-12
-						p Para conocer la opción de Vida Segura que tenemos para ti, por favor completa los siguientes campos:
+						h2.subt Para conocer la opción de Vida Segura que tenemos para ti, por favor completa los siguientes campos:
 				.row
 					.col-md-offset-3.col-md-5
 						input#nombre.form-control(type='text', placeholder='Nombre completo')
 				.row
 					.col-md-offset-3.col-md-5
-						p Fecha de nacimiento*
+						p.label Fecha de nacimiento*
 						.col-xs-12
 							input.selector.form-control(type='text')
 						.col-xs-4
@@ -65,7 +65,7 @@ html(lang="en")
 						input#nombre.form-control(type='text', placeholder='Correo electrónico*')					
 				.row
 					.col-md-offset-3.col-md-5
-						p Suma asegurada*
+						p.label Suma asegurada*
 						select.form-control
 							option(value="opcion-1") Eligir suma
 							option(value="opcion-2") b
@@ -81,11 +81,11 @@ html(lang="en")
 		.container
 			.row
 				h2.subtitulo COTIZACIÓN
-		.container.bggris
+		.container.bgwhite
 			form
 				.row
 					.col-md-12
-						p
+						h2.subt
 							strong Hola XXXXXX
 							, ésta es la mejor opción que encontramos para tí:
 				.row
@@ -186,7 +186,7 @@ html(lang="en")
 		.container
 			.row
 				h2 CUESTIONARIO
-		.container.bggris
+		.container.bgwhite
 			.row
 				.col-md-12
 					p Por favor responde la siguiente pregunta:
@@ -242,7 +242,7 @@ html(lang="en")
 		.container
 			.row
 				h2 CONTRATAR
-		.container.bggris
+		.container.bgwhite
 			.row
 				.col-md-9
 					P Para contratar tu póliza es necesario completar la información que se solicita a continuación:
@@ -513,7 +513,7 @@ html(lang="en")
 		.container
 			.row
 				h2 PÓLIZA
-		.container.bggris
+		.container.bgwhite
 			.row
 				.col-md-8
 					p
@@ -762,7 +762,7 @@ html(lang="en")
 
 		hr
 		h1 poliza
-		.container.bggris
+		.container.bgwhite
 			.triangulo
 			.row
 				.col-md-12.text-center
