--- a/vida/sass/style.scss
+++ b/vida/sass/style.scss
@@ -1,9 +1,52 @@
+$azul1:#094FA4;
+$azul2:#006EC1;
+$azul3:#009EE5;
+$azul4:#52BCEC;
+$azul5:#89D1F3;
+$azul6:#B5E5F9;
+
+$gris1:#1A1A1A;
+$gris2:#363636;
+$gris3:#666666;
+$gris4:#CCCCCC;
+$gris5:#D8D8D8;
+$gris6:#F2F2F2;
+
+$h4Family:sans-serif;
+$h4Size:19px;
+$h4Color:$azul1;
+$pLabelFamily:sans-serif;
+$pLabelSize:15px;
+$pLabelColor:$gris3;
+$pLabelW:300;
+$pDatoFamily:sans-serif;
+$pDatoSize:30px;;
+$pDatoColor:$gris2;
+$h2SubFamily:sans-serif;
+$h2SubW:500;
+$h2SubSize:18px;
+$h2SubColor:$gris2;
+
 $stepspanbg:#000;
 $stepspan:blue;
 $steph3:blue;
 $stepactivespanbg:#ddd;
 $stepactivespan:red;
 $stepactiveh3:red;
+
+body{
+	background: $gris6;
+}
+.bgwhite{
+    background: #fff;
+    border: solid 2px $gris4;
+    padding: 30px;
+    padding-bottom: 20px;
+    padding-top: 20px;
+	hr{
+		border-top: 1px solid #000;
+	}
+}
 .steps{
 
 	.step{
@@ -32,6 +75,13 @@ $stepactiveh3:red;
 
 		}
 	}
+}
+h2.subt{
+	font-family:$h2SubFamily ;
+	font-weight:$h2SubW ;
+	font-size:$h2SubSize ;
+	color:$h2SubColor ;
+
 }
 .label{
 	color: #000;
