--- a/hogar/jade/index.jade
+++ b/hogar/jade/index.jade
@@ -8,6 +8,7 @@ html(lang="en")
 		meta(name="author",content="")
 		title Cotizador de...
 		link(rel="stylesheet",href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css")
+		link(rel='stylesheet', href='https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css')
 		link(rel="stylesheet",href="style.css")
 	body
 		hr
@@ -44,47 +45,52 @@ html(lang="en")
 				.row
 					.col-md-12
 						h2.subt Para conocer la opción de Hogar que tenemos para ti, por favor completa los siguientes campos:
+						input(type="checkbox",id="checkbox-1" class="regular-checkbox big-checkbox")
+						label(for="checkbox-1")
+						a#AvPriv(target='_BLANK',href='#', data-toggle='modal', data-target='#myModalAvPriv', data-trigger='hover') Aviso de Privacidad
+							br
+						br
 						small
 							u * Campos obligatorios
 						h4 Datos personales
 				
 					.col-md-4
-						input#nombre.form-control(type='text', placeholder='Nombre (s)')
+						input.registro.form-control(type='text', placeholder='Nombre (s)')
 					.col-md-4
-						input#nombre.form-control(type='text', placeholder='Apellido paterno * ')
+						input.registro.form-control(type='text', placeholder='Apellido paterno * ')
 					.col-md-4
-						input#nombre.form-control(type='text', placeholder='Apellido materno *')
+						input.registro.form-control(type='text', placeholder='Apellido materno *')
 					.col-md-4
-						input#nombre.form-control(type='text', placeholder='Correo electrónico *')					
+						input.registro.form-control(type='text', placeholder='Correo electrónico *')					
 				.row
 					.col-md-12
 						h4 Domicilio
 
 				.row
 					.col-md-4
-						input#nombre.form-control(type='text', placeholder='Calle * ')
+						input.registro.form-control(type='text', placeholder='Calle * ')
 					.col-md-4
-						input#nombre.form-control(type='text', placeholder='No.Ext *')
+						input.registro.form-control(type='text', placeholder='No.Ext *')
 					.col-md-4
-						input#nombre.form-control(type='text', placeholder='No.Int')
+						input.registro.form-control(type='text', placeholder='No.Int')
 					.col-md-4
-						input#nombre.form-control(type='text', placeholder='C.P. *')
+						input.registro.form-control(type='text', placeholder='C.P. *')
 					.col-md-4
-						select.form-control
+						select.registro.form-control
 							option(value="opcion-1") Colonia * 
 							option(value="opcion-2") b
 							option(value="opcion-3") c
 							option(value="opcion-4") d
 							option(value="opcion-5") e
 					.col-md-4
-						input#nombre.form-control(type='text', placeholder='Delegación/Municipio * ')
+						input.registro.form-control(type='text', placeholder='Delegación/Municipio * ')
 					.col-md-4
-						input#nombre.form-control(type='text', placeholder='Ciudad *')
+						input.registro.form-control(type='text', placeholder='Ciudad *')
 				.row
 					.col-md-12
 						h4 Suma asegurada
 					.col-md-4
-						select.form-control
+						select.registro.form-control
 							option(value="opcion-1") Elige la suma asegurada *
 							option(value="opcion-2") b
 							option(value="opcion-3") c
@@ -92,7 +98,23 @@ html(lang="en")
 							option(value="opcion-5") e
 				.row
 					.col-md-12.text-center
-						button.btn-lg.btn-solid cotizar
+						button.registro.btn-lg.btn-solid cotizar
+		// Modal
+		#myModalAvPriv.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel')
+			.modal-dialog(role='document')
+				.modal-content
+					//.modal-header
+						button.close(type='button', data-dismiss='modal', aria-label='Close')
+							span(aria-hidden='true') ×
+						h4#myModalLabel.modal-title Modal title
+					.modal-body.text-center
+						h4
+							strong	Aviso de privacidad
+						h2.subt Seguros BBVA Bancomer, S,A de CV. Grupo Financiero BBVA BAncomer, Montes Urales 620, 2do piso Col.Lomas de Chapultepec, Del.Miguel Hidalgo, 11000, D.F recaba tus datos para verificar tu identidad. El aviso de privacidad Integral actualizado está en cualquiera de nuestras oficinas y en 
+							a(target="_BLANK",href="https://www.segurosbancomer.com.mx/seguros/tleu/segurosban/index.jsp") www.segurosbancomer.com.mx
+						br
+
+						button.btn-lg.btn-solid.text-center(type='button', data-dismiss='modal') Aceptar
 
 
 		hr
@@ -109,33 +131,49 @@ html(lang="en")
 							, estas son las opciones que encontramos para tí:
 				.row
 					.col-md-7
-						.col-md-12
-							.bqplanes
-								h3
-									.radio
-										input(type='radio',id="radio-1",name='planes',value='option1',checked='true' class="regular-radio")
-										label(for='radio-1')
-										span	Plan A
-								ul
-									h3.text-left Cobertura
-									li -.-.-.-.
-									li -.-.-.-.
-									li -.-.-.-.
+						.bqplanes.a.active
+							.row
+								.col-md-8
+									h2
+										.radio
+											input.planAB(type='radio',id="radio-1",name='planes',value='option1',checked='true' class="regular-radio")
+											label(for='radio-1')
+											span	Plan A
+								.col-md-4
+									h2 $3,000.°°
+							.row
+								.col-md-12
+									ul
+										h3 Coberturas
+										li -.-.-.-.
+										li -.-.-.-.
+										li -.-.-.-.
+									h4.text-center Ver detalle del producto
 					.col-md-5
-						.col-md-12
-							.bqplanes
-								h3
-									.radio
-									input(type='radio',id="radio-2",name='planes',value='option2' class="regular-radio")
-									label(for='radio-2')
-									span Plan B
-								ul
-									h3.text-left Cobertura
-									li -.-.-.-.
-									li -.-.-.-.
-									li -.-.-.-.
+						.bqplanes.b
+							.row
+								.col-md-8
+									h2
+										.radio
+											input.planAB(type='radio',id="radio-2",name='planes',value='option2' class="regular-radio")
+											label(for='radio-2')
+											span	Plan B
+								.col-md-4
+									h2 4,500.°°
+							.row
+								.col-md-12
+									ul
+										h3.text-left Cobertura
+										li Hola:-.-.-.
+										li -.-.-.-.
+										li -.-.-.-.
+									h4.text-center Ver detalle del producto
 
 				.row.bggris.planes
+					.a
+						.triangulo
+					.b
+						.triangulo
 					.col-md-12
 							h4 Elige el plan que más te convenga:
 					.col-md-6
@@ -153,7 +191,9 @@ html(lang="en")
 										.triangulo2
 									li.list-group-item
 										span.badge $250.00
-										p.label Pagos subsecuentes 11 pagos de:
+										p.label + 
+											strong 11
+											span  pago subsecuente de:
 									li.list-group-item.tp
 										span.badge $3,000.00
 										p.label Total a pagar:
@@ -169,7 +209,9 @@ html(lang="en")
 										.triangulo2
 									li.list-group-item
 										span.badge $750.00
-										p.label Pagos subsecuentes 3 pagos de:
+										p.label + 
+											strong 3
+											span  pago subsecuente de:
 									li.list-group-item.tp
 										span.badge $3,000.00
 										p.label Total a pagar:
@@ -185,7 +227,9 @@ html(lang="en")
 										.triangulo2
 									li.list-group-item
 										span.badge $1,500.00
-										p.label Pagos subsecuentes 1 pago de:
+										p.label + 
+											strong 1
+											span  pago subsecuente de:
 									li.list-group-item.tp
 										span.badge $3,000.00
 										p.label Total a pagar:
@@ -201,7 +245,11 @@ html(lang="en")
 										.triangulo2
 									li.list-group-item
 										span.badge $3,000.00
-										p.label Pago único de:
+										p.label Como 
+											strong pago único 
+											span de:
+											br
+										br
 									li.list-group-item.tp
 										span.badge $3,000.00
 										p.label Total a pagar:
@@ -220,7 +268,9 @@ html(lang="en")
 										.triangulo2
 									li.list-group-item
 										span.badge $200.00
-										p.label Pagos subsecuentes 11 pagos de:
+										p.label + 
+											strong 11
+											span  pago subsecuente de:
 									li.list-group-item.tp
 										span.badge $2,400.00
 										p.label Total a pagar:
@@ -236,7 +286,9 @@ html(lang="en")
 										.triangulo2
 									li.list-group-item
 										span.badge $800.00
-										p.label Pagos subsecuentes 3 pagos de:
+										p.label + 
+											strong 3
+											span  pago subsecuente de:
 									li.list-group-item.tp
 										span.badge $2,400.00
 										p.label Total a pagar:
@@ -252,7 +304,9 @@ html(lang="en")
 										.triangulo2
 									li.list-group-item
 										span.badge $1,200.00
-										p.label Pagos subsecuentes 1 pago de:
+										p.label + 
+											strong 1
+											span  pago subsecuente de:
 									li.list-group-item.tp
 										span.badge $2,400.00
 										p.label Total a pagar:
@@ -268,7 +322,11 @@ html(lang="en")
 										.triangulo2
 									li.list-group-item
 										span.badge $2,400.00
-										p.label Pagos único de:
+										p.label Como 
+											strong pago único 
+											span de:
+											br
+										br
 									li.list-group-item.tp
 										span.badge $2,400.00
 										p.label Total a pagar:
@@ -689,4 +747,6 @@ html(lang="en")
 		hr
 
 	script(src="http://code.jquery.com/jquery.js")
+	script(src="https://code.jquery.com/ui/1.12.1/jquery-ui.js")
+	script(src="../js/app.js")
 	script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js")
