--- a/hogar/sass/style.scss
+++ b/hogar/sass/style.scss
@@ -53,13 +53,71 @@ h2.subt{
 	color:$h2SubColor ;
 
 }
+.regular-checkbox {
+    display: none;
+}
+
+.regular-checkbox + label {
+    background-color: #fff;
+    border: 2px solid $azul2;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0px -15px 10px -12px rgba(0, 0, 0, 0.05);
+    padding: 9px;
+    border-radius: 3px;
+    display: inline-block;
+    top: 12px;
+    position: relative;
+    margin: 1px 5px 5px 1px;
+}
+
+.regular-checkbox + label:active,
+.regular-checkbox:checked + label:active {
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0px 1px 3px rgba(0, 0, 0, 0.1);
+}
+
+.regular-checkbox:checked + label {
+    background-color: #fff;
+    border: 2px solid $azul2;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0px -15px 10px -12px rgba(0, 0, 0, 0.05), inset 15px 10px -12px rgba(255, 255, 255, 0.1);
+    color: $azul2;
+}
+
+.regular-checkbox:checked + label:after {
+    content: '\2714';
+    font-size: 14px;
+    position: absolute;
+    top: -4px;
+    left: 3px;
+    color: $azul2;
+}
+
+.big-checkbox + label {
+    padding: 11px;
+}
+
+.big-checkbox:checked + label:after {
+    font-size: 22px;
+    left: 3px;
+    color: red;
+}
+
+.tag {
+    font-family: Arial, sans-serif;
+    width: 200px;
+    position: relative;
+    top: 5px;
+    font-weight: bold;
+    text-transform: uppercase;
+    display: block;
+    float: left;
+    color: red;
+}
 ul.list-group{
 	    border: 1px solid $azul4;
 	    -webkit-border-radius: 5px;
 		-moz-border-radius: 5px;
 		border-radius: 5px;
 		p.label{
-    	font-size: 10px;
+    	font-size: 13px;
 		}
 		& li.list-group-item{
 			padding: 7px 5px 7px 10px;
@@ -121,7 +179,7 @@ ul.list-group{
 			height: 0;
 			border-right: 13px solid transparent;
 			border-left: 13px solid transparent;
-			border-bottom: 13px solid $gris5;
+			border-bottom: 13px solid $gris6;
 			position: absolute;
 			left: -13px;
 			z-index: 10;
@@ -312,7 +370,31 @@ ul.list-group{
 	padding: 20px;
 	padding-top: 15px;
 	padding-bottom: 15px;
-	background: $gris5;
+	background: $gris6;
+	& .a.active{
+		.triangulo{
+		width: 0; 
+     	height: 0; 
+	    border-left: 48px solid #fff;
+	    border-top: 39px solid transparent;
+	    border-bottom: 40px solid transparent;
+	    position: relative;
+	    transform: rotate(90deg);
+	    left: -320px;
+		}
+	}
+	& .b.active{
+		.triangulo{
+		width: 0; 
+     	height: 0; 
+	    border-left: 48px solid #fff;
+	    border-top: 39px solid transparent;
+	    border-bottom: 40px solid transparent;
+	    position: relative;
+	    transform: rotate(90deg);
+	    right: -330px;
+		}
+	}
 }
 .bgwhite{
     background: #fff;
@@ -335,15 +417,50 @@ ul.list-group{
 	-webkit-border-radius: 7px;
 	-moz-border-radius: 7px;
 	border-radius: 7px;	
-	background: #ddd;
+	background: #fff;
+	border: 2px solid $azul3;
 	padding-bottom: 40px;
+	margin-bottom: 20px;
 	padding: 15px;
+	h2{
+		color:$azul2;
+		font-weight: 600;
+	}
+	h3{
+		color:$azul2;
+	}
+	h4{
+		color:$azul3;
+	    text-decoration: underline;
+	    font-weight: 600;
+	}	
 	ul{
 		li{
 			padding-bottom: 10px;
+			color: $azul3;
+			font-size: 18px;	
+		}
+	}
+	&.active{
+		background: $azul2;
+		border: 2px solid $azul2;
+		h2{
+			color:#fff;
+		}
+		h3{
+			color:$azul5;
+		}
+		h4{
+			color:#fff;
+		}	
+		ul{
+			li{
+				color: #fff;	
+			}
 		}
 	}
 }
+
 .bqblanco{
 	background:$azul5;
 	bottom: 7px;
