--- a/hogar/sass/style.scss
+++ b/hogar/sass/style.scss
@@ -3,7 +3,8 @@ $azul2:#006EC1;
 $azul3:#009EE5;
 $azul4:#52BCEC;
 $azul5:#89D1F3;
-$azul6:#B5E5F9;
+
+$verde:#86C82D;
 
 $gris1:#1A1A1A;
 $gris2:#363636;
@@ -323,6 +324,7 @@ ul.list-group{
 		padding-top:15px;
 		h3{
 			color: $steph3;
+			font-size: 16px;
 		}
 		p{
 			span{
