--- a/hogar/jade/index.jade
+++ b/hogar/jade/index.jade
@@ -190,12 +190,14 @@ html(lang="en")
 									.triangulo
 										.triangulo2
 									li.list-group-item
-										span.badge $250.00
+										span.badge 
+											strong $250.00
 										p.label + 
 											strong 11
 											span  pago subsecuente de:
 									li.list-group-item.tp
-										span.badge $3,000.00
+										span.badge 
+											strong $3,000.00
 										p.label Total a pagar:
 						.row.plan
 							.col-md-5
@@ -208,12 +210,14 @@ html(lang="en")
 									.triangulo
 										.triangulo2
 									li.list-group-item
-										span.badge $750.00
+										span.badge 
+											strong $750.00
 										p.label + 
 											strong 3
 											span  pago subsecuente de:
 									li.list-group-item.tp
-										span.badge $3,000.00
+										span.badge 
+											strong $3,000.00
 										p.label Total a pagar:
 						.row.plan
 							.col-md-5
@@ -226,12 +230,14 @@ html(lang="en")
 									.triangulo
 										.triangulo2
 									li.list-group-item
-										span.badge $1,500.00
+										span.badge 
+											strong $1,500.00
 										p.label + 
 											strong 1
 											span  pago subsecuente de:
 									li.list-group-item.tp
-										span.badge $3,000.00
+										span.badge 
+											strong $3,000.00
 										p.label Total a pagar:
 						.row.plan
 							.col-md-5
@@ -244,14 +250,16 @@ html(lang="en")
 									.triangulo
 										.triangulo2
 									li.list-group-item
-										span.badge $3,000.00
+										span.badge 
+											strong $3,000.00
 										p.label Como 
 											strong pago único 
 											span de:
 											br
 										br
 									li.list-group-item.tp
-										span.badge $3,000.00
+										span.badge 
+											strong $3,000.00
 										p.label Total a pagar:
 					.col-md-6
 						h2.subt Pagos por prima
@@ -267,12 +275,14 @@ html(lang="en")
 									.triangulo
 										.triangulo2
 									li.list-group-item
-										span.badge $200.00
+										span.badge 
+											strong $200.00
 										p.label + 
 											strong 11
 											span  pago subsecuente de:
 									li.list-group-item.tp
-										span.badge $2,400.00
+										span.badge 
+											strong $2,400.00
 										p.label Total a pagar:
 						.row.plan
 							.col-md-5
@@ -285,12 +295,14 @@ html(lang="en")
 									.triangulo
 										.triangulo2
 									li.list-group-item
-										span.badge $800.00
+										span.badge 
+											strong $800.00
 										p.label + 
 											strong 3
 											span  pago subsecuente de:
 									li.list-group-item.tp
-										span.badge $2,400.00
+										span.badge 
+											strong $2,400.00
 										p.label Total a pagar:
 						.row.plan
 							.col-md-5
@@ -303,12 +315,14 @@ html(lang="en")
 									.triangulo
 										.triangulo2
 									li.list-group-item
-										span.badge $1,200.00
+										span.badge 
+											strong $1,200.00
 										p.label + 
 											strong 1
 											span  pago subsecuente de:
 									li.list-group-item.tp
-										span.badge $2,400.00
+										span.badge 
+											strong $2,400.00
 										p.label Total a pagar:
 						.row.plan
 							.col-md-5
@@ -321,14 +335,16 @@ html(lang="en")
 									.triangulo
 										.triangulo2
 									li.list-group-item
-										span.badge $2,400.00
+										span.badge 
+											strong $2,400.00
 										p.label Como 
 											strong pago único 
 											span de:
 											br
 										br
 									li.list-group-item.tp
-										span.badge $2,400.00
+										span.badge 
+											strong $2,400.00
 										p.label Total a pagar:
 				.row
 					br
@@ -418,18 +434,18 @@ html(lang="en")
 							.col-md-12
 								h4 El domicilio a asegurar es:
 					.row
-							.col-md-2
-								.radio
-									input(type='radio',id="radio-C4",name='cuestionarioP4',value='Casa', class="regular-radio",checked='true')		
-									label(for='radio-C4')
-									label 
-										h4 Casa
-							.col-md-4
-								.radio
-									input(type='radio',id="radio-Cp4",name='cuestionarioP4',value='Dep', class="regular-radio")		
-									label(for='radio-Cp4')
-									label 
-										h4 Departamento
+						.col-md-6.text-center
+							.radio
+								input(type='radio',id="radio-C4",name='cuestionarioP4',value='Casa', class="regular-radio",checked='true')		
+								label(for='radio-C4')
+								label 
+									h4 Casa
+						.col-md-6.text-center
+							.radio
+								input(type='radio',id="radio-Cp4",name='cuestionarioP4',value='Dep', class="regular-radio")		
+								label(for='radio-Cp4')
+								label 
+									h4 Departamento
 				.row
 					br
 					br
