--- a/hogar/sass/style.scss
+++ b/hogar/sass/style.scss
@@ -4,6 +4,7 @@ $azul3:#009EE5;
 $azul4:#52BCEC;
 $azul5:#89D1F3;
 $azul6:#B5E5F9;
+$verde: #86c82d;
 
 $gris1:#1A1A1A;
 $gris2:#363636;
@@ -40,6 +41,9 @@ $stepcompleteh3:$azul5;
 body{
 	background: $gris6;
 
+}
+.azul3{
+	color: $azul3; 
 }
 h4{
 	font-family:$h4Family;
@@ -78,7 +82,7 @@ h2.subt{
     background-color: #fff;
     border: 2px solid $azul2;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0px -15px 10px -12px rgba(0, 0, 0, 0.05), inset 15px 10px -12px rgba(255, 255, 255, 0.1);
-    color: $azul2;
+    color: $verde;
 }
 
 .regular-checkbox:checked + label:after {
@@ -87,7 +91,7 @@ h2.subt{
     position: absolute;
     top: -4px;
     left: 3px;
-    color: $azul2;
+    color: $verde;
 }
 
 .big-checkbox + label {
@@ -97,7 +101,7 @@ h2.subt{
 .big-checkbox:checked + label:after {
     font-size: 22px;
     left: 3px;
-    color: red;
+    color: $verde;
 }
 
 .tag {
@@ -109,7 +113,7 @@ h2.subt{
     text-transform: uppercase;
     display: block;
     float: left;
-    color: red;
+    color: $verde;
 }
 ul.list-group{
 	    border: 1px solid $azul4;
@@ -128,11 +132,11 @@ ul.list-group{
 			font-weight:400;
 	    	font-size: 15px;
 		}
-		&.tp{
-			p.label{
+		& .tp{
+			 p.label{
 				color: $azul3;
 			}
-			& .badge{
+			.badge strong{
 				color: $azul3;
 			}
 		} 
