--- a/hogar/jade/index.jade
+++ b/hogar/jade/index.jade
@@ -11,6 +11,9 @@ html(lang="en")
 		link(rel='stylesheet', href='https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css')
 		link(rel="stylesheet",href="style.css")
 	body
+		.callme
+			br
+			p.text-center Tengo dudas, Llámenme
 		hr
 		h1 pasos
 		.steps
