--- a/hogar/jade/index.jade
+++ b/hogar/jade/index.jade
@@ -19,25 +19,20 @@ html(lang="en")
 		.steps
 			.container
 				.row
-					.col-md-offset-1.col-md-2.step.active
-						p.text-center
-							span 1
+					.col-md-offset-1.col-md-2.step.complete
+						.ico.registra
 						h3.text-center registro
-					.col-md-2.step.complete
-						p.text-center
-							span 2
+					.col-md-2.step.active
+						.ico.cotiza
 						h3.text-center cotiza
 					.col-md-2.step
-						p.text-center
-							span 3
+						.ico.valida
 						h3.text-center cuestionario
 					.col-md-2.step
-						p.text-center
-							span 4
+						.ico.contrata
 						h3.text-center contrata
 					.col-md-2.step
-						p.text-center
-							span 5
+						.ico.poliza
 						h3.text-center póliza
 		hr
 		h1 registro
