--- a/hogar/jade/index.jade
+++ b/hogar/jade/index.jade
@@ -35,6 +35,7 @@ html(lang="en")
 						.ico.poliza
 						h3.text-center póliza
 		hr
+		.ayuda
 		h1 registro
 		h2.subtitulo ingreso de datos
 		
