--- a/hogar/sass/style.scss
+++ b/hogar/sass/style.scss
@@ -353,7 +353,17 @@ ul.list-group{
     	}
     }
 }
-
+.ayuda{
+	background: $spriteurl;
+	height: 10px;
+	width: 10px;
+	&.azul{
+		background-position: -90px 84px;
+	}
+	&.blanco{
+		background-position: -126px 84px;
+	}
+}
 .steps{
 
 	.step{
