--- a/hogar/jade/index.jade
+++ b/hogar/jade/index.jade
@@ -35,7 +35,8 @@ html(lang="en")
 						.ico.poliza
 						h3.text-center póliza
 		hr
-		.ayuda
+		
+		.ayuda.azul(data-toggle='tooltip', data-placement='left', title='aqui tu mensaje')
 		h1 registro
 		h2.subtitulo ingreso de datos
 		
@@ -87,7 +88,8 @@ html(lang="en")
 						input.registro.form-control(type='text', placeholder='Ciudad *')
 				.row
 					.col-md-12
-						h4 Suma asegurada
+						h4(data-toggle='tooltip', data-placement='left', title='aqui tu mensaje') Suma asegurada
+							span.ayuda.azul
 					.col-md-4
 						select.registro.form-control
 							option(value="opcion-1") Elige la suma asegurada *
@@ -144,9 +146,12 @@ html(lang="en")
 								.col-md-12
 									ul
 										h3 Coberturas
-										li -.-.-.-.
-										li -.-.-.-.
-										li -.-.-.-.
+										li(data-toggle='tooltip', data-placement='left', title='aqui tu mensaje') -.-.-.-.
+											span.ayuda.azul
+										li(data-toggle='tooltip', data-placement='left', title='aqui tu mensaje') -.-.-.-.
+											span.ayuda.azul
+										li(data-toggle='tooltip', data-placement='left', title='aqui tu mensaje') -.-.-.-.
+											span.ayuda.azul
 									h4.text-center Ver detalle del producto
 					.col-md-5
 						.bqplanes.b
@@ -163,9 +168,12 @@ html(lang="en")
 								.col-md-12
 									ul
 										h3.text-left Cobertura
-										li Hola:-.-.-.
-										li -.-.-.-.
-										li -.-.-.-.
+										li(data-toggle='tooltip', data-placement='left', title='aqui tu mensaje') -.-.-.-.
+											span.ayuda.azul
+										li(data-toggle='tooltip', data-placement='left', title='aqui tu mensaje') -.-.-.-.
+											span.ayuda.azul
+										li(data-toggle='tooltip', data-placement='left', title='aqui tu mensaje') -.-.-.-.
+											span.ayuda.azul
 									h4.text-center Ver detalle del producto
 
 				.row.bggris.planes
@@ -434,6 +442,7 @@ html(lang="en")
 								h4 El domicilio a asegurar es:
 					.row
 						.col-md-6.text-center
+							.ico.casa
 							.radio
 								input.pregDom(type='radio',id="radio-domC",name='cuestionarioP4',value='Casa', class="regular-radio",checked='true')		
 								label(for='radio-domC')
@@ -447,6 +456,7 @@ html(lang="en")
 									input.form-control(type='text', placeholder='# Pisos ')		
 
 						.col-md-6.text-center
+							.ico.depa
 							.radio
 								input.pregDom(type='radio',id="radio-domD",name='cuestionarioP4',value='Dep', class="regular-radio")		
 								label(for='radio-domD')
@@ -755,7 +765,9 @@ html(lang="en")
 							input#contrata.form-control(type='text' placeholder='12312341234234123')
 					.col-md-6
 						.col-md-10
-							p.label CVV*
+							p.label(data-toggle='tooltip', data-placement='left', title='aqui tu mensaje') CVV*
+								span.ayuda.azul
+
 							input#contrata.form-control(type='text' placeholder='000')
 				.row
 					.col-md-6
