--- a/hogar/jade/index.jade
+++ b/hogar/jade/index.jade
@@ -442,7 +442,7 @@ html(lang="en")
 								h4 El domicilio a asegurar es:
 					.row
 						.col-md-6.text-center
-							.ico.casa
+							.ico.house
 							.radio
 								input.pregDom(type='radio',id="radio-domC",name='cuestionarioP4',value='Casa', class="regular-radio",checked='true')		
 								label(for='radio-domC')
