--- a/hogar/jade/index.jade
+++ b/hogar/jade/index.jade
@@ -876,15 +876,25 @@ html(lang="en")
 		h1 poliza
 		.container.bgazul1.poliza
 			.row
+				.exito
 				.col-md-12.text-center
 					//- img(src="", alt="")
-					h2 ¡FELICIDADES!
-					.space
-					h3 Tu compra se ha realizado sin problemas y tu PÓLIZA se ha generado correctamente.
+					h2 ¡FELICIDADES XXXXXXX XXXX!
+				.col-md-12.text-center
+					h3 ¡Has contratado tu seguro exitosamente!
+				.col-md-12.text-center
+					h4 Tu póliza se ha generado de manera correcta, la cual será enviada a tu domicilio seleccionado.
+					br
 					.space
 						p
-							span.bgazul4 PÓLIZA NO. 24689012
+							span.bgazul4 No. PÓLIZA: 
+								strong 24689012
 					.space
+					.space
+			.row
+				.col-md-12
+					.col-md-10
+					h4 Aplican restricciones y exlusiones, para dudas y aclaraciones, ingresa a www.segurosbancomer.com o llama al Centro de Servicio al Cliente: CDMX y zona metropolitana 11020000, interior de la República (0155) 11020000
 			.space
 		.container
 			.row.bgwhite
