--- a/hogar/sass/style.scss
+++ b/hogar/sass/style.scss
@@ -292,7 +292,7 @@ ul.list-group{
 
 }
 .bgazul1{
-	background-color: $azul1;
+	background-color: $azul2;
 	border-bottom: 1px solid #fff;
 	&.poliza{
 		color:#fff;
@@ -306,7 +306,16 @@ ul.list-group{
 			color: #fff;
 		    font-size: 28px;
 		}
-		span{font-size: 22px;}
+		h5{
+			font-size: 17px;
+		}
+		span{
+			font-size: 22px;
+		}
+		.verde{
+			color: $verde;
+			font-size: 28px;
+		}
 		.exito{
 			background-image: $imgExito;
 			background-repeat: no-repeat;
@@ -318,6 +327,9 @@ ul.list-group{
 			padding: 10px; 
 			border-bottom: none;
 		    padding: 17px 25px 17px 25px;
+		}
+		.info{
+			top: 12px;
 		}
 	}
 }
